--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '2'
-
 services:
   web:
     build: .
+    command: nodemon index.js
     volumes:
       - ./:/app
       - /app/node_modules
